Made needed changes and fixed components alignment
Made changes to few files and fixed components alignment for mobiles.

--- a/src/Components/ChatbotIcon.css
+++ b/src/Components/ChatbotIcon.css
@@ -1,13 +1,12 @@
 .chatbot-icon {
     position: fixed;
-    bottom: 20px;
-    right: 20px;
+    bottom: 30px;
+    right: 30px;
     cursor: pointer;
     z-index: 1000;
-  }
+}
   
-  .chatbot-icon img {
+.chatbot-icon img {
     width: 50px;
     height: 50px;
-  }
-  
+}
